--- a/9ecomv3/src/pages/sub-cate-list/sub-cate-list.scss
+++ b/9ecomv3/src/pages/sub-cate-list/sub-cate-list.scss
@@ -24,6 +24,7 @@ page-sub-cate-list {
   }
   .item-name {
     margin: 1.3vh 0 0 0;
+    white-space: normal;
 }
 .slider-container{
   height: 100px;
@@ -62,16 +63,23 @@ page-sub-cate-list {
   }
 
   .order-button{
-    width: 100%;
-    background-color: color($colors,primary);
+    width: 50px;
+    background-color: #fff;
     color: #ffffff;
     text-align: center;
-    height: 4vh;
+    height: 50px;
+    float: right;
+    
+    ion-icon{
+      font-size: 2.6em;
+      text-align: center;
+      color: color($colors,primary);
+    }
     
     ion-badge {
       position: absolute;
-      bottom: 0.4rem;
-      right: 0.8rem;
+      bottom: 3rem;
+      right: .3rem;
       opacity: 0.9;
     }
     .order-text{
@@ -90,7 +98,7 @@ page-sub-cate-list {
 }
 .price-wrapper{
   
-  width: 37%;
+  width: 100%;
  
   .price {
     font-size: 1.68rem;
