--- a/9ecomv3/src/pages/welcome/welcome.scss
+++ b/9ecomv3/src/pages/welcome/welcome.scss
@@ -1,4 +1,17 @@
 page-welcome {
+
+    .landing-background{
+        background-image: url(../assets/img/thumbnail.png);
+        background-size: cover;
+        width: 100vw;
+        height: 100vh;
+        .logo-container{
+
+            .logo-img{
+                
+            }
+        }
+    }
   .welcome-slider {
     height: 60vh;
   }
