--- a/9ecomv3/src/components/rating/rating.scss
+++ b/9ecomv3/src/components/rating/rating.scss
@@ -1,7 +1,7 @@
 rating {
 .rating-container{
     display: inline-flex;
-    color: color($colors,primary);
+    color: color($colors,secondary);
 }
 
 .rated-container{
