--- a/9ecomv3/src/pages/welcome/welcome.scss
+++ b/9ecomv3/src/pages/welcome/welcome.scss
@@ -1,16 +1,17 @@
 page-welcome {
 
     .landing-background{
-        background-image: url(../assets/img/thumbnail.png);
-        background-size: cover;
+        // background-image: url(../assets/img/thumbnail.png);
+        // background-size: contain;
         width: 100vw;
         height: 100vh;
-        .logo-container{
+        
 
             .logo-img{
-                
+                width: 100vw;
+                height: 100vh;
             }
-        }
+        
     }
   .welcome-slider {
     height: 60vh;
