--- a/9ecomv3/src/theme/variables.scss
+++ b/9ecomv3/src/theme/variables.scss
@@ -125,12 +125,15 @@ content{
   background-image: url("../assets/img/BOQ-home-bg.png");  
 
 }
-.toolbar{
-  height: 17vh !important;
-}
-.searchbar-input{
-  height: 6vh !important;
-}
+// .toolbar{
+//   height: 15vh !important;
+// }
+// .ion-header{
+//   height: 15vh !important;
+// }
+// .searchbar-input{
+//   height: 6vh !important;
+// }
 
 
 
