--dynamic search and paging --landing page update

--- a/9ecomv3/src/pages/search/search.scss
+++ b/9ecomv3/src/pages/search/search.scss
@@ -2,6 +2,9 @@ page-search {
   .search-change-button{
 
   }
+  .scroll-list{
+    height: 80vh;
+  }
 
   .search-change-wrapper{
     width :100%;
